bundle install, all ready to push to heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -242,6 +242,8 @@ a:hover {
 
 .features3 {
   border-bottom: 1px solid #ced7df;
+  margin-left: -10px;
+
 }
 
 .pricing-cell.expo {
@@ -578,7 +580,7 @@ a.tooltip-top {
 							<li><p>
 							<a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
 							Manage up to <span>50</span> profiles</p></li>
-							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
+							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort."><i class="fa fa-question-circle"></i></a>
 							<span>300</span> email credits per month</p></li>
 						</ul>
 					</div>
@@ -610,7 +612,7 @@ a.tooltip-top {
 							<li><p>
 							<a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
 							Manage up to <span>1000</span> profiles</p></li>
-							<li><p><span>3000</span> email credits per month</p></li>
+							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort."><i class="fa fa-question-circle"></i></a> <span>3000</span> email credits per month</p></li>
 							<li><p><span>Custom</span> Url</p></li>
 						</ul>
 					</div>
@@ -640,7 +642,7 @@ a.tooltip-top {
 							<li><p>
 							<a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
 							Manage up to <span>7000</span> profiles</p></li>
-							<li><p><span>20,000</span> email credits per month</p></li>
+							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort."><i class="fa fa-question-circle"></i></a> <span>20,000</span> email credits per month</p></li>
 							<li><p><span>Custom</span> Url</p></li>
 							<li><p><span>Whitelabel</span></p></li>
 						</ul>
@@ -688,8 +690,8 @@ a.tooltip-top {
 
 					<div class="features2">
 						<ul>
-							<li><p>Manage up to <span>500</span> profiles</p></li>
-							<li><p><span>1500</span> email credits</p></li>
+							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a> Manage up to <span>500</span> profiles</p></li>
+							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort."><i class="fa fa-question-circle"></i></a> <span>1500</span> email credits</p></li>
 							<li><p><span>Custom</span> Url</p></li>
 						</ul>
 					</div>
@@ -715,8 +717,8 @@ a.tooltip-top {
 
 					<div class="features3">
 						<ul>
-							<li><p>Manage up to <span>5000</span> profiles</p></li>
-							<li><p><span>15,000</span> email credits per month</p></li>
+							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a> Manage up to <span>5000</span> profiles</p></li>
+							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort."><i class="fa fa-question-circle"></i></a> <span>15,000</span> email credits per month</p></li>
 							<li><p><span>Custom</span> Url</p></li>
 							<li><p><span>Whitelabel</span></p></li>
 						</ul>
