Created thank you page

--- a/app/views/pages/thankyou.html.erb
+++ b/app/views/pages/thankyou.html.erb
@@ -1,7 +1,7 @@
 <style type="text/css">
 
 .section {
-  padding: 93px 0;
+  padding: 130px 0;
 }
 
 .section.first {
@@ -515,7 +515,7 @@ a.tooltip-top {
 
 <div class="section first">
 	<div class="row">
-		<div class="medium-10 large-7 medium-centered columns text-center">
+		<div class="medium-10 large-8 medium-centered columns text-center">
 
 			<div class="row fade-in">
 				<div class="small-9 medium-4 small-centered columns">
@@ -526,11 +526,11 @@ a.tooltip-top {
 			</div>
 
 			<div class="fade-in one">
-				<h1>Built to Optimize Your Event Marketing</h1>
+				<h1>Thanks for signing up!</h1>
 			</div>
 
 
-			<h2 class="subtitle fade-in two">The best way to <strong>improve</strong> your <br>events and sell <strong>more</strong> tickets.</h2>
+			<h2 class="subtitle fade-in two">We are inviting people in waves; we'll see you soon.</h2>
 
 
 		</div>
