Created thank you page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -644,7 +644,7 @@ a.tooltip-top {
 							Manage up to <span>7000</span> profiles</p></li>
 							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort."><i class="fa fa-question-circle"></i></a> <span>20,000</span> email credits per month</p></li>
 							<li><p><span>Custom</span> Url</p></li>
-							<li><p><span>Remove</span>EventNinja Branding</p></li>
+							<li><p><span>Remove</span> EventNinja Branding</p></li>
 						</ul>
 					</div>
 			</div>
@@ -720,7 +720,7 @@ a.tooltip-top {
 							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a> Manage up to <span>5000</span> profiles</p></li>
 							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort."><i class="fa fa-question-circle"></i></a> <span>15,000</span> email credits per month</p></li>
 							<li><p><span>Custom</span> Url</p></li>
-							<li><p><span>Remove</span>EventNinja Branding</p></li>
+							<li><p><span>Remove</span> EventNinja Branding</p></li>
 						</ul>
 					</div>
 				</div>
@@ -846,11 +846,11 @@ a.tooltip-top {
 
 					<p>This gives you metrics like:</p>
 
-					<p>The total revenue you've received from each traffic source for single and all events</p>
+					<p>The total revenue you've received from each traffic source for single and all events.</p>
 					
-					<p>The average revenue of customers from that traffic source for single and all events</p>
+					<p>The average revenue of customers from that traffic source for single and all events.</p>
 					
-					<p>The total value you can expect to receive in the long term (we call this lifetime value)</p>
+					<p>The total value you can expect to receive in the long term (we call this lifetime value).</p>
 					</ul>
 				</div>
 			</div>
