Created thank you page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -580,7 +580,7 @@ a.tooltip-top {
 							<li><p>
 							<a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
 							Manage up to <span>50</span> profiles</p></li>
-							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort."><i class="fa fa-question-circle"></i></a>
+							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort.It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a>
 							<span>300</span> email credits per month</p></li>
 						</ul>
 					</div>
@@ -612,7 +612,7 @@ a.tooltip-top {
 							<li><p>
 							<a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
 							Manage up to <span>1000</span> profiles</p></li>
-							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort."><i class="fa fa-question-circle"></i></a> <span>3000</span> email credits per month</p></li>
+							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort.It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a> <span>3000</span> email credits per month</p></li>
 							<li><p><span>Custom</span> Url</p></li>
 						</ul>
 					</div>
@@ -642,7 +642,7 @@ a.tooltip-top {
 							<li><p>
 							<a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
 							Manage up to <span>7000</span> profiles</p></li>
-							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort."><i class="fa fa-question-circle"></i></a> <span>20,000</span> email credits per month</p></li>
+							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort.It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a> <span>20,000</span> email credits per month</p></li>
 							<li><p><span>Custom</span> Url</p></li>
 							<li><p><span>Remove</span> EventNinja Branding</p></li>
 						</ul>
@@ -691,7 +691,7 @@ a.tooltip-top {
 					<div class="features2">
 						<ul>
 							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a> Manage up to <span>500</span> profiles</p></li>
-							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort."><i class="fa fa-question-circle"></i></a> <span>1500</span> email credits</p></li>
+							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort.It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a> <span>1500</span> email credits</p></li>
 							<li><p><span>Custom</span> Url</p></li>
 						</ul>
 					</div>
@@ -718,7 +718,7 @@ a.tooltip-top {
 					<div class="features3">
 						<ul>
 							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a> Manage up to <span>5000</span> profiles</p></li>
-							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort."><i class="fa fa-question-circle"></i></a> <span>15,000</span> email credits per month</p></li>
+							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort. It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a> <span>15,000</span> email credits per month</p></li>
 							<li><p><span>Custom</span> Url</p></li>
 							<li><p><span>Remove</span> EventNinja Branding</p></li>
 						</ul>
