--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -115,7 +115,12 @@
 }
 
 .pricing {
+  font-size: 1.2em;
+  font-weight: 300;
+  margin: 15px 0;
+}
 
+.pricing1 {
   font-size: 1.2em;
   font-weight: 300;
   margin: 15px 0;
@@ -507,7 +512,36 @@ a.tooltip-top {
   margin-left: -13px;
 }
 
+Table.GridOne {
+  padding: 3px;
+  margin: 0;
+  background: lightyellow;
+  border-collapse: collapse;  
+  width:45%;
+}
+
+Table.GridOne Td {  
+  padding:2px;
+  border: 1px solid #ff9900;
+  border-collapse: collapse;
+}
+
 </style>
+
+<script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+  <script>
+    $(function() {
+      $("#monthly").hide();
+      $('#hide').click(function() {
+                $('#onetime').show();
+                $('#monthly').hide();               
+       });
+
+     $('#show').click(function() {
+                $('#monthly').show();
+                $('#onetime').hide();                   
+       });
+    </script>
 
 <div class="section first">
 	<div class="row">
@@ -524,7 +558,6 @@ a.tooltip-top {
 			<div class="fade-in one">
 				<h1>Built to Optimize Your Event Marketing</h1>
 			</div>
-
 
 			<h2 class="subtitle fade-in two">The best way to <strong>improve</strong> your <br>events and sell <strong>more</strong> tickets.</h2>
 
@@ -543,128 +576,22 @@ a.tooltip-top {
 		<div class="row">
 			<div id="" class="col-sm-offset-4 col-sm-4 col-xs-12 timespan">
 				<div id="timespan-inner">
-					<a href="" data-per="month" class="one-time active" ng-click="togglePricing('one-time')">
-						One time					</a>
-					<a href="" ng-click="togglePricing('annual')" class="annual">
-                        Monthly                    </a>
+					<!--<a href="" data-per="month" class="one-time active" ng-click="togglePricing('one-time')">
+						One time					</a> -->
+
+
+           <input id="hide" type="button" value="One time"/> <input id="show" type="button" value="Monthly"/>  
+
+
+					<!-- <a href="" ng-click="togglePricing('annual')" class="annual">
+                        Monthly                    </a> -->
 				</div>
 			</div>
 		</div>
 
 
-
-	<div class="pricing clearfix">
-
-		<div class="pricing-table clearfix">
-
-
-			<div class="pricing-table-column" style=" width: 25%">
-					<div class="pricing-cell pricing-cell-header">
-						<h3><strong>Basic</strong></h3>
-						<p>Best for the curious product explorer.</p>
-						<div class="pricing-table--price"><span>Free</span></div>
-						<br><br>
-						<a class="btn btn-default" href="#" role="button">Pay With A Tweet</a>
-					</div>
-
-					<div class="pricing-cell">
-						<h4><span>1</span> User Accounts</h4>
-					</div>
-
-					<div class="pricing-cell">
-						<h4><span>1</span> Event a month</h4>
-					</div>
-					
-					<div class="features1">
-						<ul>
-							<li><p>
-							<a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
-							Manage up to <span>50</span> profiles</p></li>
-							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort.It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a>
-							<span>300</span> email credits per month</p></li>
-						</ul>
-					</div>
-
-			</div>
-							
-
-
-
-			<div class="pricing-table-column" style=" width: 25%">
-					<div class="pricing-cell pricing-cell--header">
-						<h3><strong>Casual</strong></h3>
-						<p>Best for the casual event <br>creator.</p>
-						<div class="pricing-table--price"><span>$49</span> per month</div>
-						<br><br>
-						<a class="btn btn-default" href="#" role="button">Start Your Free 30-Day Trial</a>
-					</div>
-
-					<div class="pricing-cell">
-						<h4><span>1</span> User Accounts</h4>
-					</div>
-
-					<div class="pricing-cell">
-						<h4><span>2</span> Events a month</h4>
-					</div>
-
-					<div class="features2">
-						<ul>
-							<li><p>
-							<a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
-							Manage up to <span>1000</span> profiles</p></li>
-							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort. It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a> <span>3000</span> email credits per month</p></li>
-							<li><p><span>Custom</span> Url</p></li>
-						</ul>
-					</div>
-			
-				</div>
-
-				<div class="pricing-table-column" style=" width: 25%">
-					<div class="pricing-cell pricing-cell--header">
-						<h3><strong>Regular</strong></h3>
-						<p>Best for the regular meetup events.</p>
-						<div class="pricing-table--price"><span>$149</span> per month</div>
-						<br><br>
-						<a class="btn btn-default" href="#" role="button">Start Your Free 30-Day Trial</a>
-					</div>
-
-					<div class="pricing-cell">
-						<h4><span>3</span> Users Accounts</h4>
-					</div>
-
-					<div class="pricing-cell">
-						<h4><span>Unlimited</span> Events a month</h4>
-					</div>
-
-
-					<div class="features3">
-						<ul>
-							<li><p>
-							<a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
-							Manage up to <span>7000</span> profiles</p></li>
-							<li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort. It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a> <span>20,000</span> email credits per month</p></li>
-							<li><p><span>Custom</span> Url</p></li>
-							<li><p><span>Remove</span> EventNinja Branding</p></li>
-						</ul>
-					</div>
-			</div>
-			
-				<div class="pricing-table-column" style=" width: 25%">
-					<div class="pricing-cell expo">
-						<h3><strong>Custom</strong></h3>
-						<p> Best for organisers who want a bit more.</p>
-						<br>
-						<br><br><br><br><br>
-						<p>Need more capacity or want a quote?</p>
-
-						<a class="btn btn-default" href="mailto:konnichiwa@eventninja.io" role="button">Contact Us</a>
-					</div>					
-				</div>
-	
-	</div>
-
-	<!-- One time -->
-
+<!-- One time -->
+<div id="onetime">
 	<div class="pricing clearfix">
 	
 		<div class="pricing-table clearfix">
@@ -740,15 +667,127 @@ a.tooltip-top {
 	</div>
 
 	</div>
-
-		<!-- One time end -->
-
-	
-
-		</div>
-	</div>
 </div>
 
+		<!-- Monthley -->
+<div id="monthly">
+  <div class="pricing">
+
+      <div class="pricing-table clearfix">
+
+
+        <div class="pricing-table-column" style=" width: 25%">
+            <div class="pricing-cell pricing-cell-header">
+              <h3><strong>Basic</strong></h3>
+              <p>Best for the curious product explorer.</p>
+              <div class="pricing-table--price"><span>Free</span></div>
+              <br><br>
+              <a class="btn btn-default" href="#" role="button">Pay With A Tweet</a>
+            </div>
+
+            <div class="pricing-cell">
+              <h4><span>1</span> User Accounts</h4>
+            </div>
+
+            <div class="pricing-cell">
+              <h4><span>1</span> Event a month</h4>
+            </div>
+            
+            <div class="features1">
+              <ul>
+                <li><p>
+                <a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
+                Manage up to <span>50</span> profiles</p></li>
+                <li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort.It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a>
+                <span>300</span> email credits per month</p></li>
+              </ul>
+            </div>
+
+        </div>
+                
+
+
+
+        <div class="pricing-table-column" style=" width: 25%">
+            <div class="pricing-cell pricing-cell--header">
+              <h3><strong>Casual</strong></h3>
+              <p>Best for the casual event <br>creator.</p>
+              <div class="pricing-table--price"><span>$49</span> per month</div>
+              <br><br>
+              <a class="btn btn-default" href="#" role="button">Start Your Free 30-Day Trial</a>
+            </div>
+
+            <div class="pricing-cell">
+              <h4><span>1</span> User Accounts</h4>
+            </div>
+
+            <div class="pricing-cell">
+              <h4><span>2</span> Events a month</h4>
+            </div>
+
+            <div class="features2">
+              <ul>
+                <li><p>
+                <a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
+                Manage up to <span>1000</span> profiles</p></li>
+                <li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort. It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a> <span>3000</span> email credits per month</p></li>
+                <li><p><span>Custom</span> Url</p></li>
+              </ul>
+            </div>
+        
+          </div>
+
+          <div class="pricing-table-column" style=" width: 25%">
+            <div class="pricing-cell pricing-cell--header">
+              <h3><strong>Regular</strong></h3>
+              <p>Best for the regular meetup events.</p>
+              <div class="pricing-table--price"><span>$149</span> per month</div>
+              <br><br>
+              <a class="btn btn-default" href="#" role="button">Start Your Free 30-Day Trial</a>
+            </div>
+
+            <div class="pricing-cell">
+              <h4><span>3</span> Users Accounts</h4>
+            </div>
+
+            <div class="pricing-cell">
+              <h4><span>Unlimited</span> Events a month</h4>
+            </div>
+
+
+            <div class="features3">
+              <ul>
+                <li><p>
+                <a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to see groups of users that have similar profiles. Understand exactly who are your most valuable customers, who's attending your events and who you need to re-enage or reward."><i class="fa fa-question-circle"></i></a>
+                Manage up to <span>7000</span> profiles</p></li>
+                <li><p><a href="#" class="tooltip-top" data-tooltip="EventNinja makes it easy to interact with your attendees & growing community. You can send them a message right from the platform. It's simple, convenient, and requires no extra effort. It costs $30 for 1,000 additional email credits."><i class="fa fa-question-circle"></i></a> <span>20,000</span> email credits per month</p></li>
+                <li><p><span>Custom</span> Url</p></li>
+                <li><p><span>Remove</span> EventNinja Branding</p></li>
+              </ul>
+            </div>
+        </div>
+        
+          <div class="pricing-table-column" style=" width: 25%">
+            <div class="pricing-cell expo">
+              <h3><strong>Custom</strong></h3>
+              <p> Best for organisers who want a bit more.</p>
+              <br>
+              <br><br><br><br><br>
+              <p>Need more capacity or want a quote?</p>
+
+              <a class="btn btn-default" href="mailto:konnichiwa@eventninja.io" role="button">Contact Us</a>
+            </div>          
+          </div>
+    
+    </div>
+  	
+
+  		</div>
+  	</div>
+  </div>
+</div>
+
+<!-- Monthly End -->
 
 <div class="section gray">
 	<div class="row">
