Fixed Table Switch

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -541,6 +541,10 @@ Table.GridOne Td {
                 $('#monthly').show();
                 $('#onetime').hide();                   
        });
+     $('#toggle').click(function() {
+                $('td:nth-child(3)').toggle();                
+       });
+    });
     </script>
 
 <div class="section first">
