--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -545,7 +545,7 @@ Table.GridOne Td {
                 $('td:nth-child(3)').toggle();                
        });
     });
-    </script>
+</script>
 
 <div class="section first">
 	<div class="row">
@@ -580,13 +580,8 @@ Table.GridOne Td {
 		<div class="row">
 			<div id="" class="col-sm-offset-4 col-sm-4 col-xs-12 timespan">
 				<div id="timespan-inner">
-					<!--<a href="" data-per="month" class="one-time active" ng-click="togglePricing('one-time')">
-						One time					</a> -->
-
-
-           <input id="hide" type="button" value="One time"/> <input id="show" type="button" value="Monthly"/>  
-
-
+					<a id="hide" type="button">One time</a>
+          <a id="show" type="button">Monthly</a>
 					<!-- <a href="" ng-click="togglePricing('annual')" class="annual">
                         Monthly                    </a> -->
 				</div>
