--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -261,7 +261,7 @@ a:hover {
   -moz-border-radius: 20px;
   border-radius: 20px;
   border: 1px solid #d4d4d4;
-  width: 250px;
+  width: 170px;
   height: 34px;
   display: inline-block;
 }
@@ -526,6 +526,28 @@ Table.GridOne Td {
   border-collapse: collapse;
 }
 
+a#hide {
+  width: 50%;
+  display: block;
+  float: left;
+  height: 32px;
+  line-height: 32px;
+  font-size: 15px;
+  text-align: center;
+  color: #a3a3a5;
+}
+
+a#show {
+  width: 50%;
+  display: block;
+  float: right;
+  height: 32px;
+  line-height: 32px;
+  font-size: 15px;
+  text-align: center;
+  color: #a3a3a5;
+}
+
 </style>
 
 <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
@@ -581,9 +603,7 @@ Table.GridOne Td {
 			<div id="" class="col-sm-offset-4 col-sm-4 col-xs-12 timespan">
 				<div id="timespan-inner">
 					<a id="hide" type="button">One time</a>
-          <a id="show" type="button">Monthly</a>
-					<!-- <a href="" ng-click="togglePricing('annual')" class="annual">
-                        Monthly                    </a> -->
+          <a id="show" class="monthly" type="button">Monthly</a>
 				</div>
 			</div>
 		</div>
