--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1112,7 +1112,7 @@ input.form-control {
 
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel">Almost there...</h4>
+                  <h4 class="modal-title" id="myModalLabel">Almost there Master Sensei...</h4>
                 </div>
                   <div class="modal-body">
                     <input type="text" class="form-control">
